logs/djangoembed.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/djangoembed-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/oembed'...
Listing './lib/python3.5/site-packages/oembed/fixtures'...
Listing './lib/python3.5/site-packages/oembed/image_processors'...
Listing './lib/python3.5/site-packages/oembed/migrations'...
Listing './lib/python3.5/site-packages/oembed/parsers'...
Listing './lib/python3.5/site-packages/oembed/templates'...
Listing './lib/python3.5/site-packages/oembed/templates/oembed'...
Listing './lib/python3.5/site-packages/oembed/templates/oembed/inline'...
Listing './lib/python3.5/site-packages/oembed/templatetags'...
Listing './lib/python3.5/site-packages/oembed/tests'...
Listing './lib/python3.5/site-packages/oembed/tests/fixtures'...
Listing './lib/python3.5/site-packages/oembed/tests/templates'...
Listing './lib/python3.5/site-packages/oembed/tests/templates/oembed'...
Listing './lib/python3.5/site-packages/oembed/tests/templates/oembed/inline'...
Listing './lib/python3.5/site-packages/oembed/tests/templates/oembed/provider'...
Listing './lib/python3.5/site-packages/oembed/tests/tests'...
Compiling './lib/python3.5/site-packages/oembed/views.py'...
***   File "./lib/python3.5/site-packages/oembed/views.py", line 45
    except OEmbedException, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
